fix: Update error and loading message spacing

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -25,8 +25,8 @@
   font-family: 'Modesto-Expanded';
   font-size: xx-large;
   padding-top: 1em;
-  padding-left: 5em;
-  padding-right: 5em;
+  padding-left: 1em;
+  padding-right: 1em;
 }
 
 .error-message {
